Make method createSubject idempotent